2002-11-13	Jay Monkman <jtm@smoothsmoothie.com>

	* network/cs8900.c: I don't know why we have to SelfST register
	twice on the EDB7312, but it doesn't work on the EDB7312 if we don't. 

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* network/dec21140.c: Removed warnings.

2002-10-28	Eugeny S. Mints <Eugeny.Mints@oktet.ru>

	* New files: New directory ide/, ide/Makefile.am, ide/ide_ctrl_cfg.h,
	ide/ide_ctrl_io.h, ide/ide_ctrl.h:
	* configure.ac, Makefile.am: Modified to reflect changes above.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-09-14	Joel Sherrill <joel@OARcorp.com>

	* serial/z85c30.c: Eliminated warning by clarifying statement.

2002-09-07	Chris Johns <ccj@acm.org>

	* network/Makefile.am, network/README.cs8900, network/cs8900.c,
	network/cs8900.h: Significant update which corrects the problem 
	where the cs8900.c file was actually the BSP glue.  Joel did
	some hacking so this file will compile.  Previously it required
	providing a target.h file to compile.
	* network/cs8900.c.bsp: New file.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* network/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* rtc/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* serial/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-08-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* serial/Makefile.am: Don't tmp-install lib.
	* rtc/Makefile.am: Don't tmp-install lib.

2002-07-16	Eric Norum <eric.norum@usask.ca>

	* New driver for the Intel EtherExpressPro (82559ER) chip.
	* network/if_fxp.c, network/if_fxpreg.h, network/if_fxpvar.h,
	network/pci.h: New file.
	* network/Makefile.am: Modified to reflect above.

2001-05-14	Till Straumann <strauman@slac.stanford.edu>

	* bootloader/Makefile.am, console/Makefile.am, pci/Makefile.am:
	Per PR215 address the following issues:
	    - _IO_BASE, _ISA_MEM_BASE and PCI_DRAM_OFFSET
	      are no longer defined by libcpu (powerpc/shared/include/io.h)