@@ -1,3 +1,12 @@
+2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* serial/Makefile.am: Don't include @RTEMS_BSP@.cfg.
+	Don't use LIBC_DEFINES.
+	* rtc/Makefile.am: Don't include @RTEMS_BSP@.cfg.
+	Don't use LIBC_DEFINES.
+	* network/Makefile.am: Don't include @RTEMS_BSP@.cfg.
+	Don't use LIBC_DEFINES.
+
 2002-11-13	Jay Monkman <jtm@smoothsmoothie.com>
 
 	* network/cs8900.c: I don't know why we have to SelfST register
